--- a/trunk/PSInterface/nbproject/private/private.properties
+++ b/trunk/PSInterface/nbproject/private/private.properties
@@ -2,5 +2,5 @@ copy.src.files=false
 copy.src.target=
 index.file=productSearch.php
 run.as=LOCAL
-script.arguments=key_word=zip
+script.arguments=option=byKeyword&key_word=zip
 url=http://localhost/ps/PSInterface/
